added file structure for custom styles and scripts, ripped out clean residuals, confirmed bootstrap working

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,13 +24,8 @@
     <script src="<%= url('js/parsley.min.js') %>"></script>
     <link rel="stylesheet" href="<%= url('css/parsley.css') %>">
   </head>
-  <title>Apply for Calfresh & Medi-Cal</title>
-
-  <%= yield_content :custom_head %>
-
+  <title>Reassure.us</title>
   <body>
-    <div id="main">
       <%= yield %>
-    </div>
   </body>
 </html>
