basic styles, dummy logo and header

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,11 @@
-<h1>HELLO world</h1>
-<blockquote>Testing Bootstrap CSS</blockquote>
+<header>
+	<div class="identity">
+		<img class="logo" src="<%= url('img/logo.png') %>" alt="">
+	</div>
+	<div class="title-block">
+		<p class="title">Reassure</p>
+	</div>
+</header>
+<div class="hero">
+	<h1 class="headline"></h1>
+</div>
