--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <!-- Custom css -->
-    <link rel="stylesheet"  href="<%= url('css/custom.css') %>" type="text/css">
+    <link rel="stylesheet"  href="<%= url('css/app.css') %>" type="text/css">
 
     <!-- Custom JS -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -20,9 +20,8 @@
     <!-- Typekit -->
     <script type="text/javascript" src="//use.typekit.net/qly2lma.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-      <!-- Client-side field validation -->
-    <script src="<%= url('js/parsley.min.js') %>"></script>
-    <link rel="stylesheet" href="<%= url('css/parsley.css') %>">
+    <!-- G O O G L E   F O N T S -->
+    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Lora:400,700,400italic,700italic|Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
   </head>
   <title>Reassure.us</title>
   <body>
