setup DB and save answers

--- a/views/answer.erb
+++ b/views/answer.erb
@@ -1,3 +1,5 @@
-<%= @stat %>% of your friends have herpes.
+<%= @percent_friends_who_said_yes %>% of your friends have herpes.
 
 [SHARE]
+
+<%= @answer %>
