--- a/views/login.erb
+++ b/views/login.erb
@@ -1,5 +1,25 @@
-X% of your friends have herpes.
+    <div class="question-section">
+    	<img class="question-mark" src="<%= url('img/question-mark.png') %>" alt="">
+    	<p class="question-text">percent of your friends say they have herpes.</p>
+    </div>
+    <div class="cta-banner">
+    	<p class="cta-callout">Do you?</p>
+    </div>
+    <div class="cta-explainer">
+    	<p class="cta-explainer-text">Answer <strong>honestly</strong> and <strong>anonymously</strong> to learn how you compare to your friends.
+    	<br>
+    	<br>
+    	There is power in sharing.</p>
+    </div>
+    <div class="cta-actions">
+		<div class="btn-group btn-group-justified answer-btns" role="group">
+		  <a class="btn answer-btn">yes</a>
+		  <a class="btn answer-btn">no</a>
+		</div>
+		<a href="/login">
+			<button type="button" class="btn btn-primary btn-lg btn-block connect-button">
+				<p style="margin:0; font-size:12px">Submit & Connect with Facebook</p>
+			</button>
+		</a>
+	</div>
 
-<br><br>Do you?
-
-<br><br><a href="/login">Connect with Facebook to answer anonymously</a>
