add basic share links

--- a/views/answer.erb
+++ b/views/answer.erb
@@ -1,5 +1,5 @@
 <%= @percent_friends_who_said_yes %>% of your friends have herpes.
 
-[SHARE]
+<a href = "https://www.facebook.com/sharer/sharer.php?u=www.reassure.us">Ask your friends to share</a>
 
 <%= @answer %>
