--- a/views/notenough.erb
+++ b/views/notenough.erb
@@ -1,5 +1,5 @@
 Sigh...only a few of your friends have answered so far. We want to be careful.
 
-[ASK YOUR FRIENDS]
+<a href = "https://www.facebook.com/sharer/sharer.php?u=www.reassure.us">Ask your friends to share</a>
 
 <%= @answer %>
