--- a/views/login.erb
+++ b/views/login.erb
@@ -1,25 +1,27 @@
-    <div class="question-section">
-    	<img class="question-mark" src="<%= url('img/question-mark.png') %>" alt="">
-    	<p class="question-text">percent of your friends say they have herpes.</p>
+<div class="container-fluid">
+    <div class="statistic-section row">
+        <div class="statistic-circle">
+            <span class="statistic-figure">?</span>
+        </div>
+        <p class="statistic-text">percent of your friends say they have herpes.</p>
     </div>
-    <div class="cta-banner">
-    	<p class="cta-callout">Do you?</p>
+</div>
+<!-- Container inside banner for full width color -->
+<div class="cta-callout-banner">
+    <div class="container-fluid">
+        <p class="cta-callout-text">Do you?</p>
     </div>
+</div>
+<div class="container-fluid">
     <div class="cta-explainer">
-    	<p class="cta-explainer-text">Answer <strong>honestly</strong> and <strong>anonymously</strong> to learn how you compare to your friends.
-    	<br>
-    	<br>
-    	There is power in sharing.</p>
+        <p class="cta-explainer-text">Answer <strong>honestly</strong> and <strong>anonymously</strong> to learn how you compare to your friends.
+        <br>
+        <br>
+        There is power in sharing.</p>
     </div>
-    <div class="cta-actions">
-		<div class="btn-group btn-group-justified answer-btns" role="group">
-		  <a class="btn answer-btn">yes</a>
-		  <a class="btn answer-btn">no</a>
-		</div>
-		<a href="/login">
-			<button type="button" class="btn btn-primary btn-lg btn-block connect-button">
-				<p style="margin:0; font-size:12px">Submit & Connect with Facebook</p>
-			</button>
-		</a>
-	</div>
-
+    <a href="/login">
+        <button type="button" class="btn btn-primary btn-lg btn-block facebook-button">
+            <p style="margin:0; font-size:12px">Connect with Facebook to learn</p>
+        </button>
+    </a>
+</div>
