--- a/views/login.erb
+++ b/views/login.erb
@@ -12,7 +12,7 @@
         <p class="cta-callout-text">Do you?</p>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid ">
     <div class="cta-explainer">
         <p class="cta-explainer-text">Answer <strong>honestly</strong> and <strong>anonymously</strong> to learn how you compare to your friends.
         <br>
@@ -20,7 +20,7 @@
         There is power in sharing.</p>
     </div>
     <a href="/login">
-        <button type="button" class="btn btn-primary btn-lg btn-block facebook-button">
+        <button type="button" class="btn btn-primary btn-lg btn-block facebook-btn">
             <p style="margin:0; font-size:12px">Connect with Facebook to learn</p>
         </button>
     </a>
